--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kleeklab-template",
   "version": "1.0.0",
-  "description": "This is the JSON file for the front end of the web application- KleekLab",
+  "description": "\"KleekLab Source Code\"",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
